2017-March-27 Struan Robertson

		* BuildParallel.sh, MakefileParallel: Initial revision of Linux parallel build tools.

2017-March-27 Struan Robertson

		* ZhuNakamuraCrossingCoeff.cpp, AdiabaticCurve.h: Initial revision of Zhu-Nakamura 
		surface crossing implementation.

2017-March-26 Struan Robertson

		* CollisionOperator.cpp: Fix bug related the number of time points for population 
		densities are calculated.

2017-March-26 Struan Robertson

		* FourierGrid1D.cpp, Potential1D.h/.cpp: Addition of new classes to represent a 
		general 1D potential from which QM states are calculated.

2017-March-14 Struan Robertson

		* ConditionsManger.cpp/.h, System.cpp: Corrected independent error check (again).

		* Documentation update.

2017-March-12 Struan Robertson

		* System.cpp: Rationalize .log output.

		* ConditionsManger.cpp/.h, MesmerFlags.cpp: Corrected independent error check.

		* QA.sh, Examples.sh/.bat: Updated QA scripts to allow for parallel testing.

2017-February-23 Chris Morley

		* gDensityOfStates.h, gDensityOfStates.cpp: Output vibrational frequencies to XML
		 and log files if they are calculated from Hessian.

2017-February-19 Struan Robertson

		* System.cpp, Error.h/,cpp, parallelManager.h, TMatrix.h, gWellproperties.h/.cpp, all 
		the reaction term classes: ctest output altered to allow for parallel execution.

		* Update of baselines and changed QA.bat in order to run smoke tests in parallel.

2017-February-09 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp, Analysis.h: Write out energy distributions
		to xml output.

2017-February-05 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp, Analysis.h: Write out parameter values and 
		warnings to xml output.

2017-January-28 Chris Morley

		Update of schema to include DefinedDensityOfStates and, more generally, me:DOSCMethods
		with data. Edit example and Mesmer QA files to remove old stylesheet statements, to